--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<div class="inventory-app">
-  <products-list
-    [productList]="products"
-    (onProductSelected)="productWasSelected($event)"
-  >
-  </products-list>
-</div>
+<router-outlet></router-outlet>
