6 files modified, 5 added, 1 deleted

--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -25,3 +25,7 @@
     </ktd-grid>
   </div>
 </div>
+<h2 style="margin-top: 16px">Other examples: </h2>
+<div style="display: flex; flex-direction: column">
+    <a [routerLink]="['/custom-handles']">Custom handles</a>
+</div>
