--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -32,7 +32,11 @@
     </ktd-grid>
   </div>
 </div>
-<!--<div><button class="btn btn-primary  " (click)="clearCart(layout)"> Clear Items</button></div>-->
+<div>
+  <button class="btn btn-primary" (click)="clearCart(layout)">
+    Clear Items
+  </button>
+</div>
 <h2 style="margin-top: 16px">Other examples:</h2>
 <div style="display: flex; flex-direction: column">
   <a [routerLink]="['/custom-handles']">Custom handles</a>
